--- a/android/stereo-video-udp/res/layout/main.xml
+++ b/android/stereo-video-udp/res/layout/main.xml
@@ -68,7 +68,7 @@
             android:indeterminate="false" />
     </LinearLayout>
 
-    <org.freedesktop.gstreamer.tutorials.tutorial_5.GStreamerSurfaceView
+    <org.freedesktop.gstreamer.examples.stereo_video_viewer_udp.GStreamerSurfaceView
         android:id="@+id/surface_video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
