update: set multiple surfaces for stereo video
Signed-off-by: Jaeyoung Lee <jylee0121@gmail.com>

--- a/android/stereo-video-udp/res/layout/main.xml
+++ b/android/stereo-video-udp/res/layout/main.xml
@@ -68,10 +68,23 @@
             android:indeterminate="false" />
     </LinearLayout>
 
-    <org.freedesktop.gstreamer.examples.stereo_video_viewer_udp.GStreamerSurfaceView
-        android:id="@+id/surface_video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|center_horizontal" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <org.freedesktop.gstreamer.examples.stereo_video_viewer_udp.GStreamerSurfaceView
+            android:id="@+id/surface_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal" />
+
+        <org.freedesktop.gstreamer.examples.stereo_video_viewer_udp.GStreamerSurfaceView
+            android:id="@+id/surface_video2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|center_horizontal" />
+
+    </LinearLayout>
 
 </LinearLayout>
