--- a/android/stereo-video-udp/res/layout/main.xml
+++ b/android/stereo-video-udp/res/layout/main.xml
@@ -9,13 +9,13 @@
         android:id="@+id/textview_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dip"
+        android:layout_marginBottom="0dp"
         android:gravity="center_horizontal" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dip"
+        android:layout_marginBottom="0dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal" >
 
